# PanVA

./: .dockerignore  .env  .env.example  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
api/: .env.example  .gitignore  README.md  al_pos_mrna_index.py  app.py  cluster_functions.py  generate_matrices.py  pecto_phenos_mrna.py  pyproject.toml  requirements.txt
api/docs/: data-format-homology.md  data-format.md  development.md
api/scripts/: add_quantitative.py  fix_alignment.py  fix_phenos.py  fix_variable.py  generate_matrices.py  sequence_lengths.py
docker/: apache2-foreground  api.wsgi  panva.conf
docs/: architecture.md  index.md  thornton.md  v2-improvements.md
docs/.vitepress/: config.mts
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
frontend/docs/: config.md  development.md
frontend/old_docs/: development.md
frontend/patches/: @prezly+progress-promise+2.0.1.patch  biojs-io-newick+1.5.0.patch
frontend/public/: config copy.json  config-docker.json  config.json  config_old.json
frontend/src/: App.vue  config.schema.json  config.ts  constants.ts  errors.ts  main.ts  schema.config.json  schema.homologies.json  types.ts
online_docs/: .gitignore  README.md  index.md  package-lock.json  package.json
src/: App.vue  config.ts  main.ts  types.ts
(+195 files in other folders)
